--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>unige</groupId>
+	<groupId>unige.it</groupId>
 	<artifactId>reforest</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>Demo of maven for Scala Lang website</name>
-	<url>http://scala-lang.org</url>
+	<name>Random Forests in Apache Spark</name>
+	<url>https://github.com/alessandrolulli/reforest</url>
 	<repositories>
 		<repository>
 			<id>scala-tools.org</id>
@@ -36,7 +36,6 @@
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
  			<version>2.11.8</version>
-			<!--<version>2.10.6</version>-->
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -51,7 +50,6 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<!-- <sourceDirectory>${basedir}/src</sourceDirectory> -->
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -61,21 +59,20 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.2</version>
-				<!-- nothing here -->
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-jar-plugin</artifactId>-->
+				<!--<version>2.2</version>-->
+			<!--</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.2-beta-4</version>
 				<configuration>
-                    <descriptor>assembly.xml</descriptor>
-					<!--<descriptorRefs>-->
-						<!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
-					<!--</descriptorRefs>-->
+					<descriptors>
+						<descriptor>assembly.xml</descriptor>
+						<descriptor>assembly-zip.xml</descriptor>
+					</descriptors>
 					<archive>
 						<manifest>
 							<mainClass>util.Main</mainClass>
@@ -114,6 +111,38 @@
 						<goals>
 							<goal>compile</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<id>Scaladoc</id>
+						<goals>
+							<goal>doc</goal>
+						</goals>
+						<phase>prepare-package</phase>
+						<configuration>
+							<args>
+								<arg>-no-link-warnings</arg>
+							</args>
+						</configuration>
+					</execution>
+					<execution>
+						<id>Compile</id>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+						</goals>
+						<configuration>
+							<args>
+								<arg>-dependencyfile</arg>
+								<arg>${project.build.directory}/.scala_dependencies</arg>
+							</args>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
