--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>unige.it</groupId>
+	<groupId>smartlab.ws</groupId>
 	<artifactId>reforest</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
@@ -59,57 +59,76 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-jar-plugin</artifactId>-->
-				<!--<version>2.2</version>-->
-			<!--</plugin>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<excludes>
+						<exclude>**/reforest/example/*</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>install1</id>
+						<phase>install</phase>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<configuration>
+							<file>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</file>
+							<groupId>${groupId}</groupId>
+							<artifactId>${project.artifactId}</artifactId>
+							<version>${project.version}</version>
+							<packaging>jar</packaging>
+							<localRepositoryPath>target/local-repository</localRepositoryPath>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.2-beta-4</version>
-				<configuration>
-					<descriptors>
-						<descriptor>assembly.xml</descriptor>
-						<descriptor>assembly-zip.xml</descriptor>
-					</descriptors>
-					<archive>
-						<manifest>
-							<mainClass>util.Main</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
 				<executions>
 					<execution>
+						<id>reforest-lib</id>
+						<configuration>
+							<descriptors>
+								<descriptor>assembly.xml</descriptor>
+								<descriptor>assembly-zip.xml</descriptor>
+							</descriptors>
+							<archive>
+								<manifest>
+									<mainClass>util.Main</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
 					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.scala-tools</groupId>
-				<artifactId>maven-scala-plugin</artifactId>
-				<executions>
 					<execution>
-						<id>compile</id>
+						<id>reforest-prebuild-project</id>
+						<configuration>
+							<descriptors>
+								<descriptor>assembly-project-maven.xml</descriptor>
+							</descriptors>
+							<archive>
+								<manifest>
+									<mainClass>util.Main</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+						<phase>install</phase>
 						<goals>
-							<goal>compile</goal>
-						</goals>
-						<phase>compile</phase>
-					</execution>
-					<execution>
-						<id>test-compile</id>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-						<phase>test-compile</phase>
-					</execution>
-					<execution>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>compile</goal>
+							<goal>single</goal>
 						</goals>
 					</execution>
 				</executions>
