--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>Random Forests in Apache Spark</name>
 	<url>https://github.com/alessandrolulli/reforest</url>
+	<distributionManagement>
+		<repository>
+			<id>packagecloud-travis</id>
+			<url>
+				packagecloud+https://packagecloud.io/alessandrolulli/reforest
+			</url>
+		</repository>
+		<snapshotRepository>
+			<id>packagecloud-travis</id>
+			<url>
+				packagecloud+https://packagecloud.io/alessandrolulli/reforest
+			</url>
+		</snapshotRepository>
+	</distributionManagement>
 	<repositories>
 		<repository>
 			<id>scala-tools.org</id>
@@ -166,5 +180,12 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<extensions>
+    <extension>
+      <groupId>io.packagecloud.maven.wagon</groupId>
+      <artifactId>maven-packagecloud-wagon</artifactId>
+      <version>0.0.4</version>
+    </extension>
+  </extensions>
 	</build>
 </project>
