--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,16 @@
  <sourceEncoding>UTF-8</sourceEncoding>
     </configuration>
 </plugin>
+<plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <check>true</check>
+                    <format>xml</format>
+                    <aggregate>true</aggregate>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
