--- a/pom.xml
+++ b/pom.xml
@@ -25,17 +25,22 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
-            <version>2.0.2</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.11</artifactId>
-            <version>2.0.2</version>
+            <version>2.1.1</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.cloud.bigdataoss</groupId>-->
+            <!--<artifactId>gcs-connector</artifactId>-->
+            <!--<version>1.6.1-hadoop2</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.8</version>
+            <version>2.11.11</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -59,14 +64,52 @@
             <!--<target>1.7</target>-->
             <!--</configuration>-->
             <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-shade-plugin</artifactId>-->
+                <!--<version>2.3</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>shade</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<filters>-->
+                                <!--<filter>-->
+                                    <!--<artifact>*:*</artifact>-->
+                                    <!--<excludes>-->
+                                        <!--<exclude>META-INF/*.SF</exclude>-->
+                                        <!--<exclude>META-INF/*.DSA</exclude>-->
+                                        <!--<exclude>META-INF/*.RSA</exclude>-->
+                                    <!--</excludes>-->
+                                <!--</filter>-->
+                            <!--</filters>-->
+                            <!--<artifactSet>-->
+                                <!--<excludes>-->
+                                    <!--<exclude>org.apache.spark:spark-core_2.11</exclude>-->
+                                    <!--<exclude>org.apache.spark:spark-mllib_2.11</exclude>-->
+                                    <!--<exclude>org.scala-lang:scala-library</exclude>-->
+                                <!--</excludes>-->
+                            <!--</artifactSet>-->
+                            <!--<relocations>-->
+                                <!--<relocation>-->
+                                    <!--<pattern>com.google.common</pattern>-->
+                                    <!--<shadedPattern>your.repackaged.deps.com.google.common</shadedPattern>-->
+                                <!--</relocation>-->
+                            <!--</relocations>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <excludes>
-                        <exclude>**/reforest/example/*</exclude>
-                    </excludes>
+                    <!--<excludes>-->
+                        <!--<exclude>**/reforest/example/*</exclude>-->
+                    <!--</excludes>-->
                 </configuration>
             </plugin>
             <plugin>
