--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 src/main/scala/reforest/util/converter
 src/main/scala/stats
 target
+.idea
+stats.txt
+stats-time.txt
+time-event.txt
+reforest.iml
